--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">shop</string>
+    <string name="add_new_shop_item">Add new shop item</string>
 </resources>
